# fluids-3d

./: CMakeLists.txt  run
res/: basicShader.fs  basicShader.vs  normalShader.fs  normalShader.vs
src/: FluidRenderer3d.cpp  FluidRenderer3d.h  FluidSolver3d.cpp  RenderUtil.cpp  RenderUtil.h  SimUtil.cpp  SimUtil.h  classicSolver.cpp  geo_small.txt  main.cpp
